[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/red-cascade-title-screen.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/newgame-normal.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/newgame-hover.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/quit-normal.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/quit-hover.png" type="Texture" id=6]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = 5.0
margin_right = 134.0
margin_bottom = 45.0

[node name="NewGame" type="TextureButton" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 36.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
